--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ position: relative;
 @media (max-width: 768px) {
   .container {
     background: rgb(0, 128, 196);
+    height: 100%;
   }
   .container::after {
     position: absolute;
