--- a/style.css
+++ b/style.css
@@ -138,16 +138,15 @@ position: relative;
 }
 
 @media (max-width: 768px) {
-  .container {
+  body{
     background: rgb(0, 128, 196);
+  }
+  .container {
+    background: none;
     height: 100%;
   }
   .container::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.244);
+    display: none;
   }
   
   
